syntax = "proto3";

option java_package = "io.ayoub.acdp.proto";

message POI {
  string name = 1;
  uint32 obj_cell_id = 2;
  float origin_x = 3;
  float origin_y = 4;
  float origin_z = 5;
}

message POIsDB {
  repeated POI pois = 1;
}
